--- a/index.html
+++ b/index.html
@@ -7,8 +7,24 @@
     <title>Bug Smasher</title>
 </head>
 <body>
-    <header>
-
+    <header class="bg-light">
+        <nav class="navbar display-flex">
+            <h3 class="brand">Bug Smasher</h3>
+            <ul class="navlinks display-flex">
+                <li class="nav-item"><a href="#" class="nav-link text-gray">Home</a></li>
+                <li class="nav-item"><a href="#" class="nav-link text-gray">Contact Us</a></li>
+                <li class="nav-item"><a href="#" class="nav-link text-gray">About</a></li>
+                <li class="nav-item"><a href="$" class="nav-link text-gray">Login</a></li>
+            </ul>
+        </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <h1 class="banner-title">Scares the code Bugs from a mile away</h1>
+                <p class="banner-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat tenetur praesentium aperiam commodi ab impedit tempora atque nihil quia dolore!</p>
+                <button type="submit" class="btn-primary">Explore More</button>
+            </div>
+            <img src="images/banner.png" alt="" class="banner-img">
+        </div>
     </header>
     <main>
 
