modified the banner a little

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </nav>
         <div class="banner">
             <div class="banner-content">
-                <h1 class="banner-title">Scares the code Bugs from a mile away</h1>
+                <h1 class="banner-title">Scares the Code Bugs from a mile away</h1>
                 <p class="banner-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat tenetur praesentium aperiam commodi ab impedit tempora atque nihil quia dolore!</p>
                 <button type="submit" class="btn-primary">Explore More</button>
             </div>
