--- a/index.html
+++ b/index.html
@@ -27,7 +27,57 @@
         </div>
     </header>
     <main>
+        <section class="teams display-flex">
+            <div class="team-img-container">
+                <img src="images/team1.png" alt="" srcset="">
+                <img src="images/team2.png" alt="" srcset="">
+                <img src="images/team3.png" alt="" srcset="">
+                <img src="images/team4.png" alt="" srcset="">
+            </div>
+            <div class="our-features">
+                <h3 class="section-title">Quick List of our <span >Features</span></h3>
+                <p class="feature-description text-light-gray">Lorem ipsum dolor sit amet consectetur, adipisicing elit. In doloribus, non natus necessitatibus delectus minima repellat. Ratione aperiam repellat amet.'</p>
+                <button class="btn-primary">Explore More</button>
 
+            </div>
+        </section>
+        <section>
+            
+        </section>
+        <section class="some-facts">
+            <h3 class="section-title">Some Facts</h3>
+            <p class="text-light-gray">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id quia suscipit quidem. Minus commodi delectus aspernatur velit quas perspiciatis accusamus!</p>
+            <div class="facts-container">
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="images/icons/ribon.png" alt="" class="fact-icon">
+                        <h4 class="fact-number">54</h4>
+                        <h5 class="fact-name">Award Winnigs</h5>
+                    </div>
+                </div>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="images/icons/projects.png" alt="" class="fact-icon">
+                        <h4 class="fact-number">1458</h4>
+                        <h5 class="fact-name">Project Finished</h5>
+                    </div>
+                </div>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="images/icons/customers.png" alt="" class="fact-icon">
+                        <h4 class="fact-number">590</h4>
+                        <h5 class="fact-name">Clients Worked</h5>
+                    </div>
+                </div>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="images/icons/email.png" alt="" class="fact-icon">
+                        <h4 class="fact-number">22,578</h4>
+                        <h5 class="fact-name">Email Send</h5>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
